argocd/worker.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  creationTimestamp: null
  labels:
    run: worker
  name: worker
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: worker
  template:
    metadata:
      labels:
        run: worker
    spec:
      containers:
      - image: dockersamples/examplevotingapp_worker
        name: worker
        resources: {}
status: {}
