argocd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kebernetes.io/limit-rps: "100"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: vote
          servicePort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kebernetes.io/limit-rps: "100"
spec:
  rules:
  - http:
      paths:
      - path: /result
        backend:
          serviceName: result
          servicePort: 5001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: voting-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kebernetes.io/limit-rps: "100"
spec:
  rules:
  - http:
      paths:
      - path: /vote
        backend:
          serviceName: vote
          servicePort: 5000
      - path: /result
        backend:
          serviceName: result
          servicePort: 5001
